--- a/Dummy.rmd
+++ b/Dummy.rmd
@@ -1,356 +1,21 @@
----
-title: "dummy"
-author: "Legg (Ho Man) Yeung"
-date: "July 28, 2017"
-output: pdf_document
----
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
-unem.data = read.csv("UNRATENSA.csv", header = T)
-auto.data = read.csv("TOTALNSA.csv", header = T)
-df = unem.data
-```
+# Michelle's model
 
 ```{r}
-# Michelle's Code
-df.train<-df[0:816,]
-df.test<-df[817:834,]
-ts.train<-ts(df.train$UNRATENSA, frequency = 12)
-ts.test<-ts(df.test$UNRATENSA)
-ts<-ts(df$UNRATENSA)
-```
+unem.ts = ts(unem.data$UNRATENSA, frequency = 12, start = c(1948,1)) 
+unem.train.ts = window(unem.ts, end = c(2015,12))
+unem.test.ts = window(unem.ts, start = c(2016,01))
 
-# First Difference Only
+y.lm = as.numeric(unem.train.ts)
+t.lm = as.numeric(time(unem.train.ts))
+mon.lm = as.factor(cycle(unem.train.ts))
 
-```{r}
-best.aic = 1e8
-
-for(p in 0:6){for (q in 0:6){ for (P in 0:6){ for (Q in 0:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-```
-
-```{r}
-best.aic = 1e8
-
-for(p in 1){for (q in 5:6){ for (P in 0:6){ for (Q in 4:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-```
-
-```{r}
-best.aic = 1e8
-
-for(p in 1){for (q in 5){ for (P in 6){ for (Q in 5:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-
-```
-
-```{r}
-best.aic = 1e8
-
-for(p in 1){for (q in 6){ for (P in 0:6){ for (Q in 0:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-
-```
-
-```{r}
-best.aic = 1e8
-
-for(p in 1){for (q in 6){ for (P in 6){ for (Q in 0:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-```
-
-```{r}
-best.aic = 1e8
-
-for(p in 1){for (q in 6){ for (P in 6){ for (Q in 5:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-```
-
-```{r}
-best.aic = 1e8
-
-for(P in 0:6){for (Q in 0:6){ for (p in 0:6){ for (q in 0:6){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,0,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-```
-
-# Seasonal Difference Only
-
-
-
-# First Difference + Seasonal Difference
-
-```{r}
-best.aic = 1e8
-
-for(p in 0:3){for (q in 0:3){ for (P in 0:3){ for (Q in 0:3){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,1,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-# Michelle's Loop 1:3 1:3 0:2 0:2
-
-# SARIMA(2,1,3)(3,1,3)
-```
-
-```{r}
-best.aic = 1e8
-
-for(p in 0:3){for (q in 0:3){ for (P in 0:3){ for (Q in 0:3){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,1,Q), period = frequency(ts)), method = "CSS-ML")
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-# SARIMA(3,1,3)(2,1,3)
-```
-
-```{r}
-mod = forecast::Arima(ts, order = c(2 ,1, 3), 
-                                seasonal = list(order = c(3,1,3), period = frequency(ts)), method = "ML")
-```
-
-```{r}
-summary(mod)
-```
-
-```{r}
-ts.plot(mod$residuals)
-acf(mod$residuals, lag.max = 150, main = "")
-title("acf SARIMA(2,1,3)(3,1,3)")
-pacf(mod$residuals,lag.max = 150, main = "")
-title("pacf SARIMA(2,1,3)(3,1,3)")
-```
-
-```{r}
-mod4 = forecast::Arima(ts, order = c(2 ,1, 1), 
-                                seasonal = list(order = c(0,1,0), period = frequency(ts)), method = "ML")
-
-summary(mod4)
-
-ts.plot(mod4$residuals)
-acf(mod4$residuals, lag.max = 150, main = "")
-title("acf SARIMA(2,1,1)(0,1,0)")
-pacf(mod4$residuals,lag.max = 150, main = "")
-title("pacf SARIMA(2,1,3)(0,1,0)")
-```
-
-```{r}
-Box.test(mod$residuals, lag=25, type = c("Ljung-Box"))
-Box.test(mod4$residuals, lag=25, type = c("Ljung-Box"))
+dum.m = lm(as.numeric(unem.ts) ~ as.numeric(time(unem.ts)) + as.factor(cycle(unem.ts)))
+summary(dum.m)
 ```
 
 
-```{r}
-f1<-forecast(mod, 18)
-f2<-forecast(mod4, 18)
-Box.test(mod2$residuals, lag=25, type = c("Ljung-Box"))
-Box.test(mod2$residuals, lag=25, type = c("Ljung-Box"))
-```
-
-```{r}
-out.sample.fit<-data.frame(actual=ts.test)
-out.sample.fit$predicted1<-f1$mean
-out.sample.fit$predicted2<-f2$mean
-out.sample.fit$diff1<-out.sample.fit$actual-out.sample.fit$predicted1
-out.sample.fit$diff2<-out.sample.fit$actual-out.sample.fit$predicted2
-err1<-sum(out.sample.fit$diff1**2)
-err2<-sum(out.sample.fit$diff2**2)
-```
-
-
-```{r}
-mod2 = forecast::Arima(ts, order = c(3 ,1, 3), 
-                                seasonal = list(order = c(2,1,3), period = frequency(ts)), method = "ML")
-```
-
-```{r}
-summary(mod2)
-```
-
-```{r}
-ts.plot(mod2$residuals)
-acf(mod2$residuals, lag.max = 48, main = "")
-title("acf SARIMA(3,1,3)(2,1,3)")
-pacf(mod2$residuals,lag.max = 48, main = "")
-title("pacf SARIMA(3,1,3)(2,1,3)")
-```
-
-
-
-
-
-
-
-# First Difference + Seasonal difference twice
-
-```{r}
-best.aic = 1e8
-
-for(p in 0:3){for (q in 0:3){ for (P in 0:3){ for (Q in 0:3){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,2,Q), period = frequency(ts)), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))0
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-# SARIMA(3,1,3)(3,2,3)
-```
-
-```{r}
-mod3 = forecast::Arima(ts, order = c(2 ,1, 1), 
-                                seasonal = list(order = c(0,1,1), period = frequency(ts)), method = "ML")
-```
-
-```{r}
-summary(mod3)
-```
-
-```{r}
-ts.plot(mod3$residuals)
-acf(mod3$residuals, lag.max = 48)
-pacf(mod3$residuals,lag.max = 48)
-```
-
-# First Difference + Seasonal difference period = 4
-
-```{r}
-best.aic = 1e8
-
-for(p in 0:4){for (q in 0:4){ for (P in 0:4){ for (Q in 0:4){
-          
-          mod = forecast::Arima(ts, order = c(p,1, q), 
-                                seasonal = list(order = c(P,1,Q), period = 4), method = "ML"
-                                )
-          
-          if (mod$aic < best.aic) {
-            best.aic = mod$aic
-            best.mod = mod
-            best.order = c(p,q,P,Q)
-            print(c(p,q,P,Q,mod$aic))
-          } 
-          list(best.mod,best.aic,best.order)
-}}}}
-
-# SARIMA(3,1,3)(3,2,3)
-```
